@@ -57,7 +57,7 @@ defined('PREVENT_DIRECT_ACCESS') OR exit('No direct script access allowed');
 | LavaLust Version
 | -------------------------------------------------------------------
 */
-$config['VERSION']                 = '3.0.0 Beta 1';
+$config['VERSION']                 = '3.0.0 Beta 3';
 
 /*
 | -------------------------------------------------------------------
