@@ -41,6 +41,9 @@ it inside the view.
     Example: model/sub_dir/Sample_model.php
             $thi->call->model('sub_dir/sample');
             $this->sample->method();
+6. You can now use http verb in routes. Just add the type of request after the route
+    Example: $route['delete/:num']['delete'] = 'welcome/delete/$1';
+    See docs for more info.
 # Todo
 ## Clean the scheme folder files.
 
